# crawldiff

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/crawldiff/: __init__.py  __main__.py  cli.py
src/crawldiff/commands/: config.py  crawl.py  diff.py  history.py  watch.py
src/crawldiff/core/: cloudflare.py  differ.py  storage.py  summarizer.py
src/crawldiff/output/: json_out.py  markdown.py  terminal.py
src/crawldiff/utils/: config.py  duration.py  url.py
tests/: conftest.py  test_cli.py
tests/commands/: test_config.py  test_crawl.py  test_diff.py  test_history.py  test_watch.py
tests/core/: test_cloudflare.py  test_differ.py  test_storage.py  test_summarizer.py
tests/fixtures/: snapshot_v1.json  snapshot_v2.json
tests/output/: test_json_out.py  test_markdown.py  test_terminal.py
tests/utils/: test_config.py  test_duration.py  test_url.py
